Code cleaning / documentation / finalization Pt. 1

--- a/components/llm.ipynb
+++ b/components/llm.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "#### Large Language Model Component\n",
     "- Used for calling the large language model pipeline in Google Colab to use high-spec GPU for faster LLM inference\n",
-    "- To be stored in Google Colab as a python file/script"
+    "- To be stored in Google Colab as a python file/script\n",
+    "- Contains a duplicate of prompt generator's LLM related functions (but not iterative), and Modelfile Text for the Ollama Modelfile after Fine Tuning"
    ]
   },
   {
@@ -28,41 +29,59 @@
     "from langchain_ollama.llms import OllamaLLM\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
+    "## Settings\n",
     "TEMPLATE_SETTING = 1\n",
+    "DEBUG_SETTING = 1\n",
     "\n",
+    "## Template for non-finetuned Llama 3.1 8B model. Very Consistent\n",
     "if (TEMPLATE_SETTING == 0):\n",
-    "    # Template for non fine tuned model\n",
-    "    # CONTEXT V2\n",
-    "    template = \"\"\"\n",
-    "    You are an expert in software quality assurance specializing in usability testing. Given a UI element, generate a set of functional usability test cases with detailed test scenarios.\n",
+    "    template = \"\"\"You are an expert in software quality assurance specializing in usability testing.\n",
     "\n",
-    "    The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the attribute attached to the UI element as the attribute acts as a hint about the primary focus of the test case. Also consider the following usability aspects:\n",
-    "\n",
+    "    Consider the following usability aspects:\n",
     "    Accessibility (keyboard navigation, screen reader support, etc.)\n",
     "    Responsiveness (behavior across different screen sizes, etc.)\n",
     "    Feedback (hover effects, click responses, error messages, etc.)\n",
     "    Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
     "    User experience (clarity of labels, ease of use, etc.)\n",
     "\n",
-    "    Only output the following, separated by a ~:\n",
+    "    Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
     "\n",
-    "    Objective (What the test aims to verify)\n",
-    "    Preconditions (Any setup or conditions required before testing)\n",
-    "    Test Steps (Step-by-step actions to perform the test)\n",
-    "    Expected Result (Expected outcome if the UI element works correctly)\n",
+    "    Given this UI Element: {ui_element}\n",
+    "    From this website: {url}\n",
     "\n",
-    "    Your output should only be in the following structured format but do not include the format in the output: \"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Result\"\n",
-    "    DO NOT output anything else but one test case in the said format.\n",
+    "    Generate a functional usability test case with the following aspects, separated by a `~`:\n",
+    "    - **Objective**: Clearly state the objective of the test.\n",
+    "    - **Preconditions**: List any preconditions that need to be met.\n",
+    "    - **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "    - **Expected Output**: Describe the expected output.\n",
     "\n",
-    "    Here is the UI Element: {ui_element}\n",
-    "    The UI Element is from the following website URL : {url}\n",
-    "    \"\"\"\n",
+    "    Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "    Objective: [Describe the objective] \n",
+    "    ~ Preconditions: [List preconditions, use dashes] \n",
+    "    ~ Test Steps: [Step-by-step guide] \n",
+    "    ~ Expected Output: [Describe the expected output, use dashes]\"\"\"\n",
     "\n",
     "    model_str = \"llama3.1\"\n",
+    "\n",
+    "## Template for fine-tuned Llama 3.1 8B model. Can be very sensitive to the prompt\n",
+    "# - Experimental\n",
     "elif (TEMPLATE_SETTING == 1):\n",
-    "    # template and model for fine-tuned version\n",
-    "    template = \"\"\"{ui_element} from the website: {url}\"\"\"\n",
-    "    model_str = \"llamalora4\""
+    "    template = \"\"\"Generate a functional usability test case for the following UI element: {ui_element} from the website: {url}\"\"\"\n",
+    "    model_str = \"qallama\"\n",
+    "\n",
+    "## Returns Model\n",
+    "# - Call using: chain.invoke({\"ui_element\": str(item), \"url\": url})\n",
+    "# - str(item) is string version of the scraped element\n",
+    "# - url is the website url\n",
+    "def load_model_chain(template : str =  template, model_str : str = model_str, temperature=0):\n",
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    # For Non-Fine Tuned\n",
+    "    if TEMPLATE_SETTING == 0:\n",
+    "        model = OllamaLLM(model=model_str, temperature=temperature)\n",
+    "    else:\n",
+    "        model = OllamaLLM(model=model_str)\n",
+    "    chain = prompt | model\n",
+    "    return chain"
    ]
   },
   {
@@ -74,8 +93,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "FROM llama3.1\n",
     "\n",
@@ -84,32 +107,56 @@
     "TEMPLATE \"\"\"{{ if .System }}{{ .System }}\n",
     "\n",
     "{{ end }}{{ if .Prompt }}### Instruction:\n",
-    "\n",
     "{{ .Prompt }}{{ end }}\n",
     "\n",
     "### Input:\n",
-    "You are an expert in software quality assurance specializing in usability testing. Given a UI element, generate a functional usability test case with detailed test scenarios.\n",
+    "You are an expert in software quality assurance specializing in usability testing.\n",
     "\n",
-    "The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the attribute attached to the UI element as the attribute acts as a hint about the primary focus of the test case. Also consider the following usability aspects:\n",
-    "\n",
+    "Consider the following usability aspects:\n",
     "Accessibility (keyboard navigation, screen reader support, etc.)\n",
     "Responsiveness (behavior across different screen sizes, etc.)\n",
     "Feedback (hover effects, click responses, error messages, etc.)\n",
     "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
     "User experience (clarity of labels, ease of use, etc.)\n",
     "\n",
-    "Only output the following: Objective (What the test aims to verify), Preconditions (Any setup or conditions required before testing), Test Steps (Step-by-step actions to perform the test), and Expected Result (Expected outcome if the UI element works correctly). The format is this: objective~preconditions~test steps~expected result\n",
+    "Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
     "\n",
-    "DO NOT output anything else but one test case in the said format.\n",
+    "The functional usability test case has the following aspects, separated by a `~`:\n",
+    "- **Objective**: Clearly state the objective of the test.\n",
+    "- **Preconditions**: List any preconditions that need to be met.\n",
+    "- **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "- **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "Objective: [Describe the objective] \n",
+    "~ Preconditions: [List preconditions, use dashes] \n",
+    "~ Test Steps: [Step-by-step guide] \n",
+    "~ Expected Output: [Describe the expected output, use dashes]\n",
     "\n",
     "### Response:\n",
-    "\n",
     "{{ .Response }}\n",
     "\"\"\"\n",
     "\n",
-    "PARAMETER stop \"### Instruction:\" \n",
+    "PARAMETER stop \"### Response:\"\n",
+    "PARAMETER stop \"<|end_of_text|>\"\n",
+    "PARAMETER stop \"Note:\"\n",
+    "PARAMETER stop \"EOF\"\n",
+    "PARAMETER stop \"###\"\n",
+    "PARAMETER stop \"End of Response\"\n",
+    "PARAMETER num_predict 1024\n",
     "\n",
     "SYSTEM \"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\""
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Additional parameters that may help prevent"
    ]
   }
  ],
