--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -4,6 +4,359 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Scraper Component\n",
+    "- Purpose (Latest / Final Version): Scrape a website by creating a list of ui elements and their sub-ids\n",
+    "- Requires Selenium"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Main Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "\n",
+    "import selenium\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "## Setup Driver: defaults to firefox, but uses chrome or edge if firefox is not installed\n",
+    "# - Can be prone to error due to lack of exception testing on computers without firefox\n",
+    "def setup_driver():\n",
+    "    try :\n",
+    "        options = webdriver.FirefoxOptions()\n",
+    "        options.add_argument(\"--headless\")\n",
+    "        driver = webdriver.Firefox(options=options) # Default with Firefox\n",
+    "    except Exception:\n",
+    "        try : \n",
+    "            driver = webdriver.Chrome() # Default with Chrome            \n",
+    "            ## driver = webdriver.Chrome(options=options)\n",
+    "\n",
+    "            ## Uncomment when setting up for gcolab (and using chrome)\n",
+    "            # from selenium.webdriver import ChromeOptions\n",
+    "            # from selenium.webdriver.chrome.service import Service\n",
+    "            # from webdriver_manager.chrome import ChromeDriverManager\n",
+    "            # from selenium.webdriver.chrome.options import Options\n",
+    "            # import google_colab_selenium as gs\n",
+    "            # options = ChromeOptions()\n",
+    "            # options.add_argument(\"--headless\")\n",
+    "            # driver = gs.Chrome()\n",
+    "        except Exception:\n",
+    "            try : \n",
+    "                options = webdriver.EdgeOptions()\n",
+    "                options.add_argument(\"--no-sandbox\")\n",
+    "                options.add_argument(\"--headless\")\n",
+    "                driver = webdriver.Edge(options=options) # Default with Edge\n",
+    "            except Exception:\n",
+    "                print(\"Error. No usable browser found for scraping\")\n",
+    "    \n",
+    "    return driver\n",
+    "\n",
+    "## [DEPRECATED/Only for individual testing] GET URL\n",
+    "def get_url():\n",
+    "    return input(\"Enter Website URL: \")\n",
+    "\n",
+    "## Data Scrape: Creates a list ui elements through scraping with selenium. And a sub id list\n",
+    "# - UI elements must be visible, if not, they are not scraped\n",
+    "# - After each UI element scraped, a corresponding sub id is created to address duplicates in UI elements\n",
+    "# - Duplicates in UI Elements exist as an attempt to make the LLM focus on the attributes present\n",
+    "# Returns Data and Ids through a list of lists\n",
+    "def data_scrape(url):\n",
+    "    driver = setup_driver()\n",
+    "    data = []\n",
+    "    ids = []\n",
+    "    driver.get(url)\n",
+    "\n",
+    "    i = 1\n",
+    "\n",
+    "    # BUTTONS\n",
+    "    buttons = driver.find_elements(By.CSS_SELECTOR, \"button\")\n",
+    "    for button in buttons:\n",
+    "        if button.is_displayed():\n",
+    "            # Button Element Attributes\n",
+    "            button_text = f\"Button Element '{button.text}'\" if (button.text != None and button.text != \"\") else \"Button Element Without Name (might be an image)\"\n",
+    "            button_size = f\"With Size Attribute {button.size}\" if button.size != None else \"\"\n",
+    "            button_color = f\"With Color Attribute {button.value_of_css_property(\"color\")}\" if button.value_of_css_property(\"color\") != None else \"\"\n",
+    "            button_background_color = f\"With Background Color Attribute {button.value_of_css_property(\"background-color\")}\" if button.value_of_css_property(\"background-color\") != None else \"\"\n",
+    "            button_enabled = \"Clickable\" if button.is_enabled() else \"Not Clickable\"\n",
+    "            \n",
+    "            j = 0\n",
+    "            # Store Button Element\n",
+    "            store_clickability = f\"{button_enabled} {button_text}\"\n",
+    "            data.append(store_clickability)\n",
+    "            ids.append(f\"{i}.{j}\")\n",
+    "            if (button_color != \"\" or button_background_color != \"\"):\n",
+    "                store_color = f\"{button_text} {button_color} {button_background_color} \"\n",
+    "                data.append(store_color)\n",
+    "                j+=1\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "            if (button_size != \"\"):\n",
+    "                store_size = f\"{button_text} {button_size}\"\n",
+    "                data.append(store_size)\n",
+    "                j+=1\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "            i+=1\n",
+    "\n",
+    "    ## LINKS  \n",
+    "    links = driver.find_elements(By.TAG_NAME,\"a\")\n",
+    "    for link in links:\n",
+    "        if link.is_displayed():\n",
+    "            # Link Element Attributes\n",
+    "            link_text = f\"Link Element '{link.text}'\" if (link.text != None and link.text != \"\") else \"Link Element Without Name (might be an image)\"\n",
+    "            link_url = f\"With URL {link.get_attribute('href')}\" if link.get_attribute('href') != None else \"Without URL\"\n",
+    "            # Additional Attributes\n",
+    "            link_rel = f\"With rel attribute {link.get_attribute('rel')}\" if link.get_attribute('rel') != None and link.get_attribute('rel') != \"\" else \"\"\n",
+    "            link_target = f\"With target attribute {link.get_attribute('target')}\" if link.get_attribute('target') != None and link.get_attribute('target') != \"\" else \"\"\n",
+    "            link_download = f\"A download is attached to document {link.get_attribute('download')}\" if link.get_attribute('download') != None and link.get_attribute('download') != \"\" else \"\"\n",
+    "            \n",
+    "            j = 0\n",
+    "            # Store Link Element\n",
+    "            store_navigation = f\"{link_text} {link_url} {link_target} {link_rel}\"\n",
+    "            data.append(store_navigation)\n",
+    "            ids.append(f\"{i}.{j}\")\n",
+    "            if link_download != \"\":\n",
+    "                store_download = f\"{link_text} {link_download}\"\n",
+    "                data.append(store_download)\n",
+    "                j+=1\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "            i+=1\n",
+    "\n",
+    "    # TEXT\n",
+    "    # Heading Elements\n",
+    "    for level in range(1, 7):  # HTML has 6 levels of headings (h1 to h6)\n",
+    "        headings = driver.find_elements(By.TAG_NAME,f\"h{level}\")\n",
+    "        for heading in headings:\n",
+    "            if heading.is_displayed():\n",
+    "                \n",
+    "                text_color = f\"With Color {heading.value_of_css_property(\"color\")}\" if heading.value_of_css_property(\"color\") != None else \"\"\n",
+    "                text_background_color = f\"With Background Color {heading.value_of_css_property(\"background-color\")}\" if heading.value_of_css_property(\"background-color\") != None else \"\"\n",
+    "                store = f\"Heading Element (h{level}): '{heading.text}'\"\n",
+    "                \n",
+    "                j = 0\n",
+    "                # Store\n",
+    "                data.append(store)\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "                if (text_color != \"\" or text_background_color != \"\"):\n",
+    "                    data.append(f\"{store} {text_color} {text_background_color}\")\n",
+    "                    j+=1\n",
+    "                    ids.append(f\"{i}.{j}\")\n",
+    "                i+=1\n",
+    "\n",
+    "    # Paragraph Elements\n",
+    "    paragraphs = driver.find_elements(By.TAG_NAME,\"p\")\n",
+    "    for paragraph in paragraphs:\n",
+    "        if paragraph.is_displayed():\n",
+    "            \n",
+    "            text_color = f\"With Color {paragraph.value_of_css_property(\"color\")}\" if paragraph.value_of_css_property(\"color\") != None else \"\"\n",
+    "            text_background_color = f\"With Background Color {paragraph.value_of_css_property(\"background-color\")}\" if paragraph.value_of_css_property(\"background-color\") != None else \"\"\n",
+    "            store = f\"Paragraph Element: '{paragraph.text}'\"\n",
+    "\n",
+    "            j = 0\n",
+    "            # Store\n",
+    "            data.append(store)\n",
+    "            ids.append(f\"{i}.{j}\")\n",
+    "            if (text_color != \"\" or text_background_color != \"\"):\n",
+    "                data.append(f\"{store} {text_color} {text_background_color}\")\n",
+    "                j+=1\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "            i+=1\n",
+    "\n",
+    "    # Input Elements\n",
+    "    input_tags = driver.find_elements(By.TAG_NAME,\"input\")\n",
+    "    for input_tag in input_tags:\n",
+    "        if input_tag.is_displayed():\n",
+    "            # Basic Attributes\n",
+    "            input_field_name = f\"Input Field Element: '{input_tag.get_attribute('name')}'\" if input_tag.get_attribute('name') != None else \"Without Name\"\n",
+    "            input_field_type = f\"With Type {input_tag.get_attribute('type')}\" if input_tag.get_attribute('name') != None else \"Without Type\"\n",
+    "            # Additional Attributes\n",
+    "            input_field_value = f\"With Value {input_tag.get_attribute('value')}\" if input_tag.get_attribute('name') != None else \"Without Value\"\n",
+    "            input_field_placeholder = f\"With Placeholder '{input_tag.get_attribute('placeholder')}'\" if input_tag.get_attribute('name') != None else \"Without Placeholder\"\n",
+    "            input_field_readonly = f\"Is Readonly\" if input_tag.get_attribute('readonly') != None else \"Is Editable\"\n",
+    "            input_field_disabled = f\"Disabled\" if input_tag.get_attribute('disabled') != None else \"Enabled\"\n",
+    "            input_field_required = f\"Is Required\" if input_tag.get_attribute('required') != None else \"Not Required\"\n",
+    "            input_field_autocomplete = f\"Is Autocomplete\" if input_tag.get_attribute('autocomplete') != None else \"Not Autocomplete\"\n",
+    "\n",
+    "            # Store based on type\n",
+    "            if (input_tag.get_attribute('type') == \"submit\"):\n",
+    "                store = f\"Form Submit Button Element: {input_tag.get_attribute(\"name\")} {input_field_disabled}\"\n",
+    "                data.append(store)\n",
+    "                j = 0\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "            else:\n",
+    "                store = f\"{input_field_disabled} {input_field_name} {input_field_type} {input_field_required}\"\n",
+    "                data.append(store)\n",
+    "                j = 0\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "\n",
+    "                store_value = f\"{input_field_name} {input_field_type} {input_field_value}\"\n",
+    "                data.append(store_value)\n",
+    "                j+=1\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "\n",
+    "                store_placeholder = f\"{input_field_name} {input_field_type} {input_field_placeholder}\"\n",
+    "                data.append(store_placeholder)\n",
+    "                j+=1\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "\n",
+    "                store_readonly = f\"{input_field_name} {input_field_type} {input_field_readonly}\"\n",
+    "                data.append(store_readonly)\n",
+    "                j+=1\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "\n",
+    "                store_autocomplete = f\"{input_field_name} {input_field_type} {input_field_autocomplete}\"\n",
+    "                data.append(store_autocomplete)\n",
+    "                j+=1\n",
+    "                ids.append(f\"{i}.{j}\")\n",
+    "            i+=1\n",
+    "            \n",
+    "    # Close the browser\n",
+    "    driver.quit()\n",
+    "\n",
+    "    data = [data, ids]\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Table Splitting Functions Based on Scraped Data structure\n",
+    "- Divide Scraped Data - Divides The Scraped Data further based on their category\n",
+    "- Get Divide Indices - Based on the previous function to return a list of division indices for LLM output division\n",
+    "- Divide LLM Output - Divides any list (like the LLM output) that has equal elements to scraped data and divides based on divide indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Divide Scraped Data\n",
+    "def divide_scraped_data(scraped_data):\n",
+    "    divided_scraped_data = []\n",
+    "    \n",
+    "    # Initiate titles\n",
+    "    category_titles = [\n",
+    "        \"Button Element\",\n",
+    "        \"Link Element\",\n",
+    "        \"Heading Element\",\n",
+    "        \"Paragraph Element\",\n",
+    "        \"Form Submit Button Element\",\n",
+    "        \"Input Field Element\"\n",
+    "    ]\n",
+    "\n",
+    "    # Inititate sublists\n",
+    "    buttons = []\n",
+    "    links = []\n",
+    "    headers = []\n",
+    "    paragraphs = []\n",
+    "    form_submits = []\n",
+    "    inputs = []\n",
+    "\n",
+    "    # Initiate mainlist\n",
+    "    divided_scraped_data = [\n",
+    "        buttons,\n",
+    "        links,\n",
+    "        headers,\n",
+    "        paragraphs,\n",
+    "        form_submits,\n",
+    "        inputs\n",
+    "    ]\n",
+    "\n",
+    "    i = 0\n",
+    "    while (i < len(scraped_data)):\n",
+    "        # Check through titles\n",
+    "        for title in category_titles:\n",
+    "            if (title in scraped_data[i]):\n",
+    "                divided_scraped_data[category_titles.index(title)].append(scraped_data[i])\n",
+    "                break\n",
+    "        i+=1\n",
+    "\n",
+    "    return divided_scraped_data\n",
+    "\n",
+    "\n",
+    "# Get Divide Incices\n",
+    "def get_divide_indices(divided_scraped_data):\n",
+    "    divided_scraped_data\n",
+    "    indices = []\n",
+    "\n",
+    "    i = 0\n",
+    "    for data_type in divided_scraped_data:\n",
+    "        indices.append(i)\n",
+    "        for data in data_type:\n",
+    "            i+=1\n",
+    "\n",
+    "    return indices\n",
+    "\n",
+    "# Divide the LLM Output\n",
+    "def divide_llm_output(scraped_data, llm_output, indices):\n",
+    "    # Inititate sublists\n",
+    "    buttons = []\n",
+    "    links = []\n",
+    "    headers = []\n",
+    "    paragraphs = []\n",
+    "    form_submits = []\n",
+    "    inputs = []\n",
+    "\n",
+    "    # Initiate mainlist\n",
+    "    divided_data = [\n",
+    "        buttons,\n",
+    "        links,\n",
+    "        headers,\n",
+    "        paragraphs,\n",
+    "        form_submits,\n",
+    "        inputs\n",
+    "    ]\n",
+    "\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    n = 0\n",
+    "    \n",
+    "    index = 0\n",
+    "    k = 0\n",
+    "    while (index < len(indices)-1):\n",
+    "        i = indices[index]\n",
+    "        j = indices[index+1]\n",
+    "        while (n >= i and n < j):\n",
+    "            divided_data[k].append(llm_output[n])\n",
+    "            n+=1\n",
+    "        k += 1\n",
+    "        index += 1\n",
+    "    while (n<len(llm_output)):\n",
+    "        divided_data[k].append(llm_output[n])\n",
+    "        n+=1\n",
+    "    \n",
+    "    return divided_data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ~What follows from here are old / legacy code from previous cycles~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prototype Code : Scraper"
    ]
   },
