--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -4,6 +4,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Table Generator Component\n",
+    "- Purpose (Latest / Final Version): Using LLM Output and Scraper component extra utility functions, create a table or set of tables for viewing in django_app and downloading as csv or pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Main Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "## Table Dataframe Initialization\n",
+    "# - Creates a Dataframe based on a dictionary\n",
+    "# - Credits to finding this neat utility : \n",
+    "def dataframe_init(data):\n",
+    "    df = pd.DataFrame(dict([(key, pd.Series(value)) for key, value in data.items()]))\n",
+    "    return df\n",
+    "\n",
+    "## CSV Generator\n",
+    "# - Creates a CSV based on initialized dataframe\n",
+    "def csv_from_test_case_batches(filename, data):\n",
+    "    cols = dataframe_init(data)\n",
+    "    cols.to_csv(f\"{filename}.csv\", sep='\\t', encoding='utf-8', index=False, header=True)\n",
+    "\n",
+    "## Create Fine Tuning Dataset\n",
+    "# - For Dataset Generator\n",
+    "# - Does not contain input assignment, that is relegated to dataset_correction notebook\n",
+    "def create_fine_tuning_dataset(scraped_data, llm_output, name : str = \"fine_tuning_dataset\", url : str = \"\"):\n",
+    "    # Dataset Generator : Resulting Dataset Columns / Parameters\n",
+    "    out_data = llm_output # LLM Output\n",
+    "    in_data = []\n",
+    "    instruction_data = []\n",
+    "    i = 0\n",
+    "    while (i < len(scraped_data)):\n",
+    "        # Instruction / Prompt\n",
+    "        template = f\"Generate a functional usability test case for the following UI element: {scraped_data[i]} from the website: {url}\"\n",
+    "        instruction_data.append(template)\n",
+    "\n",
+    "        # Constant Context (Input)\n",
+    "        input_context = f\"\"\n",
+    "        in_data.append(input_context)\n",
+    "        i+=1\n",
+    "\n",
+    "    data = {\"output\" : out_data, \n",
+    "            \"input\" : in_data, \n",
+    "            \"instruction\" : instruction_data}\n",
+    "    csv_from_test_case_batches(name, data)\n",
+    "    return dataframe_init(data) \n",
+    "\n",
+    "## Create Table Dataset\n",
+    "# - Creates a test case dataframe, ready to be turned into a table, turned to html for rendering, and for downloading as csv\n",
+    "# - Saved index functions as a starting point for generating a set of tables with saved indices for division\n",
+    "def create_table_dataset(llm_output, ids : list, saved_index : int = 0):\n",
+    "\n",
+    "    id = []\n",
+    "    objective = []\n",
+    "    precondition = []\n",
+    "    test_steps = []\n",
+    "    expected_result = []\n",
+    "    actual_result = []\n",
+    "\n",
+    "    i = saved_index\n",
+    "    for test_case in llm_output:\n",
+    "        split_test_case = test_case.split('~')\n",
+    "        \n",
+    "        # Validate and skip if split is a failure\n",
+    "        if len(split_test_case) != 4:\n",
+    "            # Test Case ID\n",
+    "            id.append(ids[i])\n",
+    "            # Test Case Objective\n",
+    "            objective.append(split_test_case[0])\n",
+    "            # Test Case Precondition\n",
+    "            precondition.append(split_test_case[1])\n",
+    "            # Test Case Steps \n",
+    "            test_steps.append(split_test_case[2])\n",
+    "            # Test Case Expected Output\n",
+    "            expected_result.append(split_test_case[3])\n",
+    "            # Test Case Actual Result\n",
+    "            actual_result.append(\"Pass/Fail\")\n",
+    "\n",
+    "        i+=1\n",
+    "\n",
+    "    data = {\"Test Case ID\" : id,\n",
+    "            \"Objective\" : objective,\n",
+    "            \"Precondition\" : precondition,\n",
+    "            \"Test Steps\" : test_steps,\n",
+    "            \"Expected Result\" : expected_result,\n",
+    "            \"Actual Result\" : actual_result}\n",
+    "\n",
+    "    return dataframe_init(data)\n",
+    "\n",
+    "## Create Tables:\n",
+    "# - Creates multiple tables based on indices\n",
+    "def create_tables(divided_llm_output, ids, indices):\n",
+    "    tables = []\n",
+    "    i = 0\n",
+    "\n",
+    "    for llm_output in divided_llm_output:\n",
+    "        tables.append(create_table_dataset(llm_output, ids, indices[i]))\n",
+    "        i+=1\n",
+    "\n",
+    "    return tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ~What follows from here are old / legacy code from previous cycles~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prototype Code : Table Generator"
    ]
   },
