--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -4,16 +4,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset Generation\n",
+    "#### Dataset Generation\n",
     "- Consists of scraper, prompt generator, and table generator. Because of this, development of prompt generator, table generator, and scraper are partially based on the development of dataset generation notebook (and vice versa)\n",
-    "### How To Use\n",
+    "#### How To Use\n",
     "- Assuming you have all dependencies, just run all cells and give the website URL (.org/.edu/.gov)\n",
     "- I will comment out all unused cells so it is safe to run all\n",
-    "### Dependencies\n",
+    "#### Dependencies\n",
     "- Selenium\n",
     "- Ollama (and Llama 3.1 8b)\n",
     "- Pandas"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 4 FINAL : [Use This]\n",
+    "- Only For Documentation Purposes\n",
+    "- No need to increase dataset further due to overfitting / unlimited generation incidents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
