--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -4,6 +4,169 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Prompt Generator Component\n",
+    "- Purpose (Latest / Final Version): based on scraped data, create a prompt for each scraped data and feed it to the LLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Prompt Generator + LLM\n",
+    "# Langchain and Ollama\n",
+    "import langchain\n",
+    "from langchain_ollama.llms import OllamaLLM\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "## Settings\n",
+    "TEMPLATE_SETTING = 1\n",
+    "DEBUG_SETTING = 1\n",
+    "\n",
+    "## Template for non-finetuned Llama 3.1 8B model. Very Consistent\n",
+    "if (TEMPLATE_SETTING == 0):\n",
+    "    template = \"\"\"You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "    Consider the following usability aspects:\n",
+    "    Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "    Responsiveness (behavior across different screen sizes, etc.)\n",
+    "    Feedback (hover effects, click responses, error messages, etc.)\n",
+    "    Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "    User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "    Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "    Given this UI Element: {ui_element}\n",
+    "    From this website: {url}\n",
+    "\n",
+    "    Generate a functional usability test case with the following aspects, separated by a `~`:\n",
+    "    - **Objective**: Clearly state the objective of the test.\n",
+    "    - **Preconditions**: List any preconditions that need to be met.\n",
+    "    - **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "    - **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "    Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "    Objective: [Describe the objective] \n",
+    "    ~ Preconditions: [List preconditions, use dashes] \n",
+    "    ~ Test Steps: [Step-by-step guide] \n",
+    "    ~ Expected Output: [Describe the expected output, use dashes]\"\"\"\n",
+    "\n",
+    "    model_str = \"llama3.1\"\n",
+    "\n",
+    "## Template for fine-tuned Llama 3.1 8B model. Can be very sensitive to the prompt\n",
+    "# - Experimental\n",
+    "elif (TEMPLATE_SETTING == 1):\n",
+    "    # template and model for fine-tuned version\n",
+    "    template = \"\"\"Generate a functional usability test case for the following UI element: {ui_element} from the website: {url}\"\"\"\n",
+    "    model_str = \"qallama\"\n",
+    "\n",
+    "## Common Error Removal Function: can be readjusted based on common errors of results\n",
+    "def remove_common_error(output : str, setting : int = 0):\n",
+    "    if (setting == 0 or setting == 2):\n",
+    "        # Errors are strings that commonly appear as errors in the intended output\n",
+    "        errors = [\"Objective~Preconditions~Test Steps~Expected Result\", \n",
+    "                \"Objective:\", \"**Objective**:\",\n",
+    "                \"Preconditions:\", \"**Preconditions**:\",\n",
+    "                \"Test Steps:\", \"**Test Steps**:\",\n",
+    "                \"Expected Output:\", \"**Expected Output**:\",\n",
+    "                \"**** \"\n",
+    "                ]\n",
+    "        for error in errors:\n",
+    "            output = output.replace(error, \"\")\n",
+    "    if (setting == 1 or setting == 2):\n",
+    "        # Adjustments are strings that are not intended to be deleted, but instead adjusted\n",
+    "        adjustments = [\"Preconditions~\", \"Test Steps~\", \"Expected Result~\"]\n",
+    "        for adjustment in adjustments:\n",
+    "            output = output.replace(adjustment, \"~\")\n",
+    "    return output\n",
+    "\n",
+    "## Load/Reload Model\n",
+    "def load_model_chain(template : str =  template, model_str : str = model_str, temperature=0):\n",
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    # For Non-Fine Tuned\n",
+    "    if TEMPLATE_SETTING == 0:\n",
+    "        model = OllamaLLM(model=model_str, temperature=temperature)\n",
+    "    else:\n",
+    "        model = OllamaLLM(model=model_str)\n",
+    "    chain = prompt | model\n",
+    "    return chain\n",
+    "\n",
+    "def create_test_cases(data, model_str : str = model_str , template : str = template, url : str = \"placeholder\"):\n",
+    "    \n",
+    "    # Load LLM Chain\n",
+    "    chain = load_model_chain(template, model_str)\n",
+    "\n",
+    "    # Return Data\n",
+    "    return_data = []\n",
+    "    \n",
+    "    i = 0\n",
+    "    total = len(data)\n",
+    "    for item in data:\n",
+    "        test_case = chain.invoke({\"ui_element\": str(item), \"url\": url})\n",
+    "        test_case = remove_common_error(test_case)\n",
+    "        return_data.append(test_case)\n",
+    "        # LLM Reset To Free Up Context\n",
+    "        chain = load_model_chain(template, model_str)\n",
+    "        if (DEBUG_SETTING == 1):\n",
+    "            print(f\"test case {i} out of {total} generated\")\n",
+    "        i += 1\n",
+    "        # If i is a multiple of 3, refresh request.session['llm_output']\n",
+    "        # if i % 3 == 0:\n",
+    "        #     set_llm_output(return_data)\n",
+    "\n",
+    "    return return_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Asynchronous Run for Dynamic Results [Experimental]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ## Set Get Clear Functions : for updating the current llm output, clearing llm output, and getting llm output\n",
+    "\n",
+    "# # Set LLM Output\n",
+    "# # - Use during generation\n",
+    "# def set_llm_output(data):\n",
+    "#     request.session['llm_output'] = data\n",
+    "\n",
+    "# # Clear LLM Output\n",
+    "# # - Use at the start of generation\n",
+    "# def clear_llm_output():\n",
+    "#     request.session['llm_output'] = []\n",
+    "\n",
+    "# # Get LLM Output\n",
+    "# # - Use during / after generation\n",
+    "# def get_llm_output():\n",
+    "#     return request.session['llm_output']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ~What follows from here are old / legacy code from previous cycles~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prototype Code : Prompt Generator"
    ]
   },
